text changes for candidate page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="col my-auto ">
             <div class="candidate-header-content ">
             <h1 class="mb-5 ">Find the right fit data science job for you</h1>
-            <a href="# " class="btn btn-gold btn-lg ">Sign up</a>
+            <a href="# " class="btn btn-gold btn-xl ">Sign up</a>
             </div>
         </div>
         </div>
@@ -67,7 +67,7 @@
         <div class="container ">
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 my-auto">
-                    <p class="text-header ">Find the perfect role by matching on fit, goals & experience</p>
+                    <p class="text-header pt-4">Find the perfect role by matching on fit, goals & experience</p>
                     <p class="font-weight-normal text-left">JobRobin uses algorithmic and human intelligence to identify the companies and roles that are more than simply a skills match. We not only consider where you are today, but where you want to be in the future.</p>
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
@@ -88,8 +88,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6 my-auto ">
-                    <p class="text-header text-right pt-4">We give you real feedback</p>
-                    <p class="font-weight-normal text-right pb-5">Ever wonder why you didn’t get an offer or interview for a role you seemed perfect for? If we think you’re a fit for a role, we guarantee you feedback so you can improve your chances going forward.</p>
+                    <p class="text-header pt-4">We give you real feedback</p>
+                    <p class="font-weight-normal pb-5">Ever wonder why you didn’t get an offer or interview for a role you seemed perfect for? If we think you’re a fit for a role, we guarantee you feedback so you can improve your chances going forward.</p>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     <p class="text-header ">The last profile you’ll fill out</p>
                     <p class="font-weight-normal text-left">We’re not here to just help you get your next job. We’re here to help you make all of your future career decisions.
                     JobRobin grows with you learning about you even after you get hired so that you understand your options.</p>
-                    <a class="btn btn-md btn-turquoise " href="#">Learn more</a>
+                    <a class="btn btn-xl btn-turquoise " href="#">Learn more</a>
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
@@ -116,22 +116,20 @@
     <section class="globe " id="globe">
         <div class="container ">
             <div class="row globe-row1">
-                <div class="col-sm-12 col-lg-4 ">
+                <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
                         <img class="img-fluid " src="assets/media/images/data-globe.png ">
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-7 my-auto ml-auto">
-                    <p class="text-header text-right pt-4">We match your profile to the right opportunities in Data Science</p>
-                    <p class="font-weight-normal text-right">JobRobin makes direct introductions to its employer partners who are building data teams to solve interesting problems. Our employer partners work across industries including tech.</p>
+                <div class="col-sm-12 col-lg-6 my-auto ">
+                    <p class="text-header pt-4">We match your profile to the right opportunities in Data Science</p>
+                    <p class="font-weight-normal">JobRobin makes direct introductions to its employer partners who are building data teams to solve interesting problems. Our employer partners work across industries including tech.</p>
                 </div>
             </div>
-            <div class="row mt-5">
+            <div class="row">
                 <div class="container">
-                    <div class="globe-footer">
-                        <p class="text-header">Under JobRobin’s wings, you’ll wing big…. No, that’s lame, but seriously. 
-                        </p>
-                        <a class="btn btn-md btn-gold" href="#">Sign up</a>
+                    <div class="container text-center">
+                        <a class="btn btn-xl btn-gold" href="#">Sign up</a>
                     </div>
                 </div>
             </div>
