text changes header and body section for candidates

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 my-auto">
                     <p class="text-header pt-4">Find the perfect role by matching on fit, goals & experience</p>
-                    <p class="font-weight-normal text-left">JobRobin uses algorithmic and human intelligence to identify the companies and roles that are more than simply a skills match. We not only consider where you are today, but where you want to be in the future.</p>
+                    <p class="font-weight-normal">JobRobin uses algorithmic and human input to identify the companies and roles that are more than simply a skills match.  We not only consider where you are today, but what you value and where you want to get to in the future.</p>
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
@@ -99,9 +99,8 @@
         <div class="container ">
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 my-auto">
-                    <p class="text-header ">The last profile you’ll fill out</p>
-                    <p class="font-weight-normal text-left">We’re not here to just help you get your next job. We’re here to help you make all of your future career decisions.
-                    JobRobin grows with you learning about you even after you get hired so that you understand your options.</p>
+                    <p class="text-header ">Near term results and long term thinking</p>
+                    <p class="font-weight-normal text-left">JobRobin is focused on bringing amazing roles to you.  Since it’s sometimes hard to know “amazing” until we experience it, JobRobin works to capture your insights even after getting hired, adapting and improving as you grow.</p>
                     <a class="btn btn-xl btn-turquoise " href="#">Learn more</a>
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
@@ -122,8 +121,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6 my-auto ">
-                    <p class="text-header pt-4">We match your profile to the right opportunities in Data Science</p>
-                    <p class="font-weight-normal">JobRobin makes direct introductions to its employer partners who are building data teams to solve interesting problems. Our employer partners work across industries including tech.</p>
+                    <p class="text-header pt-4">Get referred beyond your network</p>
+                    <p class="font-weight-normal">JobRobin makes direct introductions to its network of employer partners that are building data teams across a range of industries.  We save you time by doing the work to discover the opportunities and helping you skip to the front of the applicant line.</p>
                 </div>
             </div>
             <div class="row">
