button size change candidate

--- a/home_emp_mdr.html
+++ b/home_emp_mdr.html
@@ -42,7 +42,7 @@
                         <a class="nav-link login " href="# ">Log in</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="btn btn-md btn-gold" href="# ">Sign up</a>
+                        <a class="btn btn-sm btn-gold" href="# ">Sign up</a>
                     </li>
                 </ul>
             </div>
