--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link login " href="# ">Log in</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="btn btn-md btn-gold" href="# ">Sign up</a>
+                        <a class="btn btn-sm btn-gold" href="# ">Sign up</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +56,7 @@
         <div class="col my-auto ">
             <div class="candidate-header-content ">
             <h1 class="mb-5 ">Find the right fit data science job for you</h1>
-            <a href="# " class="btn btn-gold btn-md ">Sign up</a>
+            <a href="# " class="btn btn-gold btn-lg ">Sign up</a>
             </div>
         </div>
         </div>
@@ -101,7 +101,7 @@
                 <div class="col-sm-12 col-lg-6 my-auto">
                     <p class="text-header ">Near term results and long term thinking</p>
                     <p class="font-weight-normal text-left">JobRobin is focused on bringing amazing roles to you.  Since it’s sometimes hard to know “amazing” until we experience it, JobRobin works to capture your insights even after getting hired, adapting and improving as you grow.</p>
-                    <a class="btn btn-md btn-turquoise " href="#">Learn more</a>
+                    <a class="btn btn-lg btn-turquoise " href="#">Learn more</a>
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
