--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
-                        <img class="img-fluid " src="assets/media/images/role-chart.png ">
+                        <img class="img-fluid " src="assets/media/images/role-gear.png ">
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
-                        <img class="img-fluid " src="assets/media/images/feedback.png ">
+                        <img class="img-fluid " src="assets/media/images/feedback-profile-sheet.png">
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6 my-auto ">
@@ -98,15 +98,10 @@
     <section class="profile " id="profile">
         <div class="container ">
             <div class="row ">
-                <div class="col-sm-12 col-lg-6 my-auto">
+                <div class="col-sm-12 col-md-7 text-center mx-auto my-auto">
                     <p class="text-header ">Near term results and long term thinking</p>
-                    <p class="font-weight-normal text-left">JobRobin is focused on bringing amazing roles to you.  Since it’s sometimes hard to know “amazing” until we experience it, JobRobin works to capture your insights even after getting hired, adapting and improving as you grow.</p>
+                    <p class="font-weight-normal">JobRobin is focused on bringing amazing roles to you.  Since it’s sometimes hard to know “amazing” until we experience it, JobRobin works to capture your insights even after getting hired, adapting and improving as you grow.</p>
                     <a class="btn btn-lg btn-turquoise " href="#">Learn more</a>
-                </div>
-                <div class="col-sm-12 col-lg-6 ">
-                    <div class="container ">
-                        <img class="img-fluid " src="assets/media/images/resume-img.png">
-                    </div>
                 </div>
             </div>
         </div>
